--- a/package.xml
+++ b/package.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0"?>
-<package format="3">
+<package format="2">
   <name>ros2_camera_lidar_fusion_cpp</name>
   <version>0.1.0</version>
-  <description>LiDAR-Camera calibration using ROS2 and C++</description>
-
-  <maintainer email="omid.azarfar95@gmail.com">Omid Azarfar</maintainer>
+  <description>ROS2 C++ implementation of LiDAR-camera calibration and projection</description>
+  <maintainer email="you@example.com">Your Name</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
-  <depend>OpenCV</depend>
   <depend>cv_bridge</depend>
-  <depend>image_transport</depend>
+  <depend>OpenCV</depend>
   <depend>pcl_conversions</depend>
-  <depend>PCL</depend>
-  <depend>yaml-cpp</depend>
+  <depend>pcl_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
