--- a/config/general.yaml
+++ b/config/general.yaml
@@ -1,8 +1,25 @@
-camera_topic: "/camera/image_raw"
-lidar_topic: "/lidar/points"
-image_directory: "data/images"
-lidar_directory: "data/lidar"
-selected_image: "data/selected/image.png"
-selected_lidar: "data/selected/lidar.pcd"
-camera_intrinsics_file: "config/camera_intrinsics.yaml"
-extrinsics_file: "config/extrinsics.yaml"
+chessboard:
+  pattern_size:
+    rows: 6
+    columns: 9
+  square_size_meters: 0.025
+
+camera:
+  image_topic: /camera/image_raw
+  image_size:
+    width: 640
+    height: 480
+  projected_topic: /camera/projected_image
+
+lidar:
+  lidar_topic: /lidar/points
+
+general:
+  config_folder: /tmp/calibration_config
+  camera_intrinsic_calibration: camera_calib.yaml
+  camera_extrinsic_calibration: extrinsic.yaml
+  data_folder: /tmp/calibration_data
+  max_file_saved: 100
+  keyboard_listener: true
+  slop: 0.1
+  correspondence_file: image_cloud_correspondence.txt
