--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
-<package format="2">
-  <name>ros2_camera_lidar_fusion_cpp</name>
-  <version>0.1.0</version>
-  <description>ROS2 C++ implementation of LiDAR-camera calibration and projection</description>
-  <maintainer email="you@example.com">Your Name</maintainer>
+<package format="3">
+  <name>camera_calibration</name>
+  <version>0.0.1</version>
+  <description>Camera and LiDAR calibration toolkit</description>
+
+  <maintainer email="your@email.com">Your Name</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -11,11 +12,10 @@
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
-  <depend>OpenCV</depend>
+  <depend>yaml-cpp</depend>
+  <depend>message_filters</depend>
+  <depend>open3d</depend>
   <depend>pcl_conversions</depend>
-  <depend>pcl_msgs</depend>
 
-  <export>
-    <build_type>ament_cmake</build_type>
-  </export>
+  <exec_depend>opencv4</exec_depend>
 </package>
