--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,51 +1,60 @@
-cmake_minimum_required(VERSION 3.5)
-project(ros2_camera_lidar_fusion_cpp)
+cmake_minimum_required(VERSION 3.8)
+project(camera_calibration)
 
-# C++ standard
-set(CMAKE_CXX_STANDARD 17)
-
-# Dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(OpenCV REQUIRED)
-find_package(PCL REQUIRED)
 find_package(cv_bridge REQUIRED)
+find_package(yaml-cpp REQUIRED)
+find_package(message_filters REQUIRED)
+find_package(Open3D REQUIRED)
+find_package(pcl_conversions REQUIRED)
 
 include_directories(
   include
   ${OpenCV_INCLUDE_DIRS}
-  ${PCL_INCLUDE_DIRS}
 )
 
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
+add_executable(camera_calibration_node src/camera_calibration_node.cpp)
+add_executable(save_data_node src/save_data_node.cpp)
+add_executable(image_cloud_correspondence_node src/image_cloud_correspondence_node.cpp)
+add_executable(camera_lidar_extrinsic_node src/camera_lidar_extrinsic_node.cpp)
+add_executable(lidar_camera_projection_node src/lidar_camera_projection_node.cpp)
 
-# Node sources
-add_executable(intrinsic_calibration_node src/intrinsic_calibration_node.cpp)
-ament_target_dependencies(intrinsic_calibration_node rclcpp sensor_msgs OpenCV)
+ament_target_dependencies(camera_calibration_node
+  rclcpp sensor_msgs cv_bridge yaml-cpp
+)
 
-add_executable(sensor_data_saver_node src/sensor_data_saver_node.cpp)
-ament_target_dependencies(sensor_data_saver_node rclcpp sensor_msgs PCL OpenCV)
+ament_target_dependencies(save_data_node
+  rclcpp sensor_msgs cv_bridge yaml-cpp message_filters pcl_conversions
+)
 
-add_executable(manual_selector_node src/manual_selector_node.cpp)
-ament_target_dependencies(manual_selector_node rclcpp OpenCV PCL)
+ament_target_dependencies(image_cloud_correspondence_node
+  rclcpp yaml-cpp Open3D
+)
 
-add_executable(extrinsic_calibration_node src/extrinsic_calibration_node.cpp)
-ament_target_dependencies(extrinsic_calibration_node rclcpp PCL OpenCV)
+ament_target_dependencies(camera_lidar_extrinsic_node
+  rclcpp yaml-cpp OpenCV
+)
 
-add_executable(projection_node src/projection_node.cpp)
-ament_target_dependencies(projection_node rclcpp PCL OpenCV sensor_msgs cv_bridge)
+ament_target_dependencies(lidar_camera_projection_node
+  rclcpp sensor_msgs cv_bridge yaml-cpp message_filters OpenCV
+)
+
+target_link_libraries(camera_calibration_node ${OpenCV_LIBRARIES})
+target_link_libraries(save_data_node ${OpenCV_LIBRARIES} Open3D::Open3D)
+target_link_libraries(image_cloud_correspondence_node ${OpenCV_LIBRARIES} Open3D::Open3D)
+target_link_libraries(camera_lidar_extrinsic_node ${OpenCV_LIBRARIES})
+target_link_libraries(lidar_camera_projection_node ${OpenCV_LIBRARIES})
 
 install(TARGETS
-  intrinsic_calibration_node
-  sensor_data_saver_node
-  manual_selector_node
-  extrinsic_calibration_node
-  projection_node
-  DESTINATION lib/${PROJECT_NAME})
-
-install(DIRECTORY config launch
-  DESTINATION share/${PROJECT_NAME})
+  camera_calibration_node
+  save_data_node
+  image_cloud_correspondence_node
+  camera_lidar_extrinsic_node
+  lidar_camera_projection_node
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 ament_package()
